--- a/Source/ChargifyDirectExample.MVC/packages.config
+++ b/Source/ChargifyDirectExample.MVC/packages.config
@@ -1,21 +1,28 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="bootstrap" version="3.0.1" targetFramework="net45" />
+  <package id="bootstrap" version="5.2.2" targetFramework="net48" />
   <package id="chargify2" version="1.0.5630.19667" targetFramework="net45" />
-  <package id="jQuery" version="2.1.4" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
+  <package id="jQuery" version="3.6.1" targetFramework="net48" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.9" targetFramework="net48" />
   <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="5.0.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
-  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net45" />
-  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net45" />
-  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net45" />
-  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net4" userInstalled="true" />
-  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
-  <package id="RestSharp" version="105.1.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.9" targetFramework="net48" />
+  <package id="Microsoft.AspNet.WebApi" version="5.2.9" targetFramework="net48" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.9" targetFramework="net48" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.9" targetFramework="net48" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.9" targetFramework="net48" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.9" targetFramework="net48" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="7.0.0" targetFramework="net48" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net48" />
+  <package id="Microsoft.Web.Infrastructure" version="2.0.0" targetFramework="net48" userInstalled="true" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
+  <package id="RestSharp" version="108.0.2" targetFramework="net48" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
+  <package id="System.Text.Encodings.Web" version="7.0.0" targetFramework="net48" />
+  <package id="System.Text.Json" version="7.0.0" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
   <package id="Twitter.Bootstrap" version="3.0.1.1" targetFramework="net45" />
 </packages>
